@@ -1,14 +1,14 @@
 package car.racing.game;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class CarName {
 
-    private static final String COMMA = ",";
+    private static final String SYMBOL = ",";
 
     public List<String> divideCarName(String Name) {
-        return Arrays.asList(Name.split(COMMA));
+        return new ArrayList<>(List.of(Name.split(SYMBOL)));
     }
 
 }
